99_KubernetesBook/03_Ingress/host_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-host-ingress
  labels:
      name: my-host-ingress
spec:
  rules:
  - host: alpaca.example.org
    http:
      paths:
      - backend:
          serviceName: backend1
          servicePort: 8081
