99_KubernetesBook/03_Ingress/simple_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-simple-ingress
  labels:
      name: my-simple-ingress
spec:
  backend:
    serviceName: backend1
    servicePort: 8081
